--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -8,29 +8,35 @@
 
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="86dp"
-        android:layout_height="wrap_content"
-        android:text="Cart"
+        android:id="@+id/textView2"
+        android:layout_width="218dp"
+        android:layout_height="58dp"
+        android:layout_marginHorizontal="10dp"
+        android:gravity="center"
+        android:letterSpacing=".7"
+        android:text="-----------\n Cart\n-----------"
         android:textColor="@color/black"
-        android:textSize="40sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/priceTotal"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="-2dp" />
 
     <TextView
         android:id="@+id/priceTotal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:gravity="center"
         android:text="0"
         android:textColor="@color/black"
-        android:textSize="40sp"
+        android:layout_marginEnd="20dp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView" />
-
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        tools:layout_editor_absoluteY="0dp" />
 
     <Button
         android:id="@+id/button2"
@@ -47,5 +53,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        tools:layout_editor_absoluteX="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
