--- a/app/src/main/res/layout/activity_details_page.xml
+++ b/app/src/main/res/layout/activity_details_page.xml
@@ -45,6 +45,7 @@
             android:id="@+id/profileImage"
             android:layout_width="120dp"
             android:layout_height="120dp"
+            android:padding="20dp"
             android:layout_gravity="center"
             android:background="@drawable/circle"
             android:clipToOutline="true"
@@ -63,15 +64,33 @@
         android:orientation="vertical">
 
         <EditText
+            android:id="@+id/etemail"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginHorizontal="50dp"
+            android:layout_marginVertical="20dp"
+            android:background="@drawable/rounded_four_sides"
+            android:drawableLeft="@drawable/baseline_email_24"
+            android:textColorHint="#808080"
+            android:drawablePadding="10dp"
+            android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:inputType="textEmailAddress"
+            android:padding="15dp" />
+
+        <EditText
             android:id="@+id/etMobileDetails"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginHorizontal="50dp"
-
+            android:drawableLeft="@drawable/baseline_phone_24"
             android:background="@drawable/rounded_four_sides"
             android:text=""
+            android:drawablePadding="10dp"
+            android:hint="Mobile Number"
             android:textColor="@color/black"
             android:inputType="textPersonName"
+            android:textColorHint="#808080"
             android:padding="15dp"/>
 
         <EditText
@@ -79,38 +98,14 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginHorizontal="50dp"
+            android:drawableLeft="@drawable/baseline_person_24"
             android:layout_marginTop="20dp"
+            android:drawablePadding="10dp"
             android:background="@drawable/rounded_four_sides"
             android:hint="Name"
             android:textColorHint="#808080"
             android:textColor="@color/black"
             android:inputType="textPersonName"
-            android:padding="15dp" />
-
-        <EditText
-            android:id="@+id/etemail"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginHorizontal="50dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/rounded_four_sides"
-            android:hint="Email-ID"
-            android:textColorHint="#808080"
-            android:textColor="@color/black"
-            android:inputType="textEmailAddress"
-            android:padding="15dp" />
-
-        <EditText
-            android:id="@+id/etpassword"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginHorizontal="50dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/rounded_four_sides"
-            android:hint="Password"
-            android:textColor="@color/black"
-            android:textColorHint="#808080"
-            android:inputType="textPassword"
             android:padding="15dp" />
 
         <com.google.android.material.button.MaterialButton
@@ -126,5 +121,19 @@
             android:textSize="20sp"
             android:textStyle="bold"
             app:cornerRadius="15dp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/logout"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginBottom="20dp"
+            android:backgroundTint="#f04c5c"
+            android:text="Logout"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:cornerRadius="15dp" />
     </LinearLayout>
+
 </LinearLayout>
