--- a/app/src/main/res/layout/activity_food_page.xml
+++ b/app/src/main/res/layout/activity_food_page.xml
@@ -27,16 +27,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:textSize="15sp"
+            android:textColor="@color/black"
             android:textStyle="bold" />
-
-
-
-
-
-
-
-
-
 
         <LinearLayout
             android:layout_width="match_parent"
