--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,39 +73,48 @@
             android:textStyle="bold|italic"
             />
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginHorizontal="40dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-
-            android:orientation="horizontal">
-
-
-
             <EditText
-                android:layout_width="49dp"
-                android:layout_height="48dp"
-                android:textColor="@color/black"
-                android:layout_marginEnd="10dp"
-                android:inputType="number"
-                android:text="+91" />
-
-            <EditText
-                android:id="@+id/etMobile"
+                android:id="@+id/etEmail"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:hint="Enter Phone Number"
+                android:hint="Enter Email-ID"
                 android:textColor="@color/black"
                 android:textColorHint="#808080"
-                android:layout_marginStart="10dp"
-                android:inputType="number"
+                android:layout_marginHorizontal="40dp"
+                android:layout_marginTop="20dp"
+                android:drawableLeft="@drawable/baseline_email_24"
+                android:drawablePadding="10dp"
+                android:inputType="textEmailAddress"
                 android:text=""
                 />
 
-        </LinearLayout>
+        <EditText
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:hint="Enter Password"
+            android:drawableLeft="@drawable/baseline_password_24"
+            android:drawablePadding="10dp"
+            android:textColor="@color/black"
+            android:textColorHint="#808080"
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginTop="20dp"
+            android:inputType="textPassword"
+            android:text=""
+            />
+
+        <TextView
+            android:id="@+id/tvForgotPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Forgot Password?"
+            android:textColor="#e13947"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:textStyle="bold"
+            android:clickable="true"
+            android:focusable="true"/>
+
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/cont"
@@ -134,7 +143,7 @@
             />
 
         <ImageView
-            android:id="@+id/border"
+            android:id="@+id/logo"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
