--- a/app/src/main/res/layout/fragment_offers.xml
+++ b/app/src/main/res/layout/fragment_offers.xml
@@ -6,16 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".Offers">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:orientation="horizontal"
+        app:cardCornerRadius="35dp"
         tools:ignore="MissingConstraints">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/offerButton"
             android:layout_width="200dp"
-            android:layout_margin="20dp"
             android:layout_height="150dp"
             android:orientation="horizontal"
             android:background="@drawable/pinkcard">
@@ -24,17 +24,18 @@
                 android:id="@+id/offerText"
                 android:layout_width="200dp"
                 android:layout_height="150dp"
-                android:padding="20dp"
-                app:cornerRadius="25dp"
-                android:backgroundTint="@android:color/transparent"
-                app:strokeWidth="2dp"
-                android:textColor="@color/black"
-                android:text=""
-                android:gravity="start"
-                android:textSize="15sp"
                 android:layout_gravity="center"
-                />
-        </LinearLayout>
+                android:backgroundTint="@android:color/transparent"
+                android:gravity="start"
+                android:padding="20dp"
+                android:text=""
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                app:cornerRadius="25dp"
+                app:strokeWidth="2dp"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="0dp" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
