--- a/app/src/main/res/layout/activity_food_page.xml
+++ b/app/src/main/res/layout/activity_food_page.xml
@@ -38,9 +38,13 @@
             android:layout_marginTop="20dp"
             android:layout_marginHorizontal="20dp">
 
-            <SearchView
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/searchView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content"
+                android:queryHint="Search here..."
+                android:iconifiedByDefault="false" />
+
 
         </LinearLayout>
 
