--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -13,16 +13,16 @@
         android:layout_width="407dp"
         android:layout_height="74dp"
         android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="84dp"
         android:gravity="center"
         android:letterSpacing=".7"
         android:text="-------------------\nClick The QR for Payment -------------------"
         android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/qrImage"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="3dp" />
+        tools:layout_editor_absoluteX="4dp" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -52,20 +52,31 @@
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/qrImage"
+        app:layout_constraintTop_toBottomOf="@+id/contPayment"
         tools:layout_editor_absoluteX="9dp" />
 
-    <ImageView
-        android:id="@+id/qrImage"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="176dp"
-        android:scaleType="centerCrop"
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/contPayment"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="#f04c5c"
+        android:layout_marginHorizontal="45dp"
+        android:layout_marginTop="15dp"
+
+        app:cornerRadius="15dp"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        tools:ignore="MissingConstraints" />
+
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:text="Complete Payment"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
