--- a/app/src/main/res/layout/activity_details_page.xml
+++ b/app/src/main/res/layout/activity_details_page.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F04C5C"
+    android:background="@drawable/bg_gradient_purple"
     android:orientation="vertical"
     tools:context=".Details_Page">
 
@@ -53,15 +53,18 @@
             android:src="@drawable/ic_profile_pic"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="2dp" />
+            tools:layout_editor_absoluteY="2dp"
+            tools:ignore="MissingConstraints" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="#EBE9E9"
         android:orientation="vertical">
+
+
 
         <EditText
             android:id="@+id/etemail"
@@ -108,29 +111,53 @@
             android:inputType="textPersonName"
             android:padding="15dp" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_gradient_purple"
+            android:layout_marginHorizontal="50dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="20dp"
+            android:orientation="vertical">
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/cont2"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginTop="35dp"
-            android:layout_marginBottom="20dp"
-            android:backgroundTint="#f04c5c"
+            app:backgroundTint="@android:color/transparent"
             android:text="Update Profile"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:cornerRadius="15dp" />
+        </LinearLayout>
+
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/history"
+            style="@style/Widget.Material3.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="50dp"
+            android:layout_marginBottom="20dp"
+            android:backgroundTint="@color/white"
+            android:text="History"
+            android:textColor="#764ba2"
             android:textSize="20sp"
             android:textStyle="bold"
             app:cornerRadius="15dp" />
 
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/logout"
+            style="@style/Widget.Material3.Button.OutlinedButton"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginHorizontal="15dp"
+            android:layout_marginHorizontal="50dp"
             android:layout_marginBottom="20dp"
-            android:backgroundTint="#f04c5c"
+            android:backgroundTint="#FFFFFF"
             android:text="Logout"
-            android:textColor="@color/white"
+            android:textColor="#FF0000"
             android:textSize="20sp"
             android:textStyle="bold"
             app:cornerRadius="15dp" />
