--- a/app/src/main/res/layout/activity_food_page.xml
+++ b/app/src/main/res/layout/activity_food_page.xml
@@ -14,6 +14,7 @@
         tools:context=".FoodPage"
         android:background="@color/white">
 
+
         <FrameLayout
             android:id="@+id/topPanel"
             android:layout_width="match_parent"
@@ -21,32 +22,24 @@
             android:layout_height="wrap_content"/>
 
 
-        <TextView
-            android:id="@+id/location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:textSize="15sp"
-            android:textColor="@color/black"
-            android:textStyle="bold" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="#f1e1e7"
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="20dp">
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="vertical"-->
+<!--            android:background="#f1e1e7"-->
+<!--            android:layout_marginTop="20dp"-->
+<!--            android:layout_marginHorizontal="20dp">-->
 
-            <androidx.appcompat.widget.SearchView
-                android:id="@+id/searchView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:queryHint="Search here..."
-                android:iconifiedByDefault="false" />
+<!--            <androidx.appcompat.widget.SearchView-->
+<!--                android:id="@+id/searchView"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:queryHint="Search here..."-->
+<!--                android:iconifiedByDefault="false" />-->
 
 
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
         <TextView
             android:layout_width="match_parent"
@@ -352,8 +345,6 @@
 
 
         </FrameLayout>
-
-
 
 
 
