--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/bg_card"
+    android:layout_marginTop="15dp"
+    android:layout_marginHorizontal="30dp"
     tools:context=".CartItem">
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:background="#67808080"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,8 +43,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:background="#67808080"
+
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         tools:ignore="MissingConstraints"
@@ -64,7 +64,7 @@
                 android:layout_width="147dp"
                 android:layout_height="match_parent"
                 android:gravity="left|center"
-                android:paddingHorizontal="15dp"
+                android:paddingHorizontal="35dp"
                 android:text=""
                 android:textColor="@color/black"
                 android:textSize="25dp"
