--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,22 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginTop="10dp"
     tools:context=".Profile">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="25dp"
         android:layout_marginHorizontal="30dp"
-        tools:ignore="MissingConstraints">
+        android:orientation="horizontal"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="30dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_margin="20dp"
-            android:text="Tap2Eat"
             android:gravity="center"
+            android:text="Tap2Eat"
             android:textColor="#e13947"
             android:textSize="25sp"
             android:textStyle="bold|italic"
@@ -31,12 +33,48 @@
             android:layout_width="50dp"
             android:layout_height="60dp"
             android:layout_gravity="end"
-            android:src="@drawable/ic_profile_pic"
             android:scaleType="centerCrop"
+            android:src="@drawable/ic_profile_pic"
             app:layout_constraintEnd_toEndOf="parent"
             tools:layout_editor_absoluteY="0dp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        tools:layout_editor_absoluteX="0dp">
+
+
+        <TextView
+            android:id="@+id/location"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            tools:ignore="Suspicious0dp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnChatbot"
+            style="@style/Widget.Material3.Button.OutlinedButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:textColor="@color/black"
+            android:layout_margin="16dp"
+            android:layout_weight="1"
+            android:backgroundTint="@color/white"
+            android:text="AI Assistant"
+            android:textSize="12sp" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
