--- a/app/src/main/res/layout/activity_food_page.xml
+++ b/app/src/main/res/layout/activity_food_page.xml
@@ -1,353 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+    android:layout_height="match_parent"
+    tools:context=".FoodPage"
+    android:fitsSystemWindows="true"
+    >
+
 
     <LinearLayout
-        android:id="@+id/main"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context=".FoodPage"
-        android:background="@color/white">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
 
-        <FrameLayout
-            android:id="@+id/topPanel"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_marginTop="20dp"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
-
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="vertical"-->
-<!--            android:background="#f1e1e7"-->
-<!--            android:layout_marginTop="20dp"-->
-<!--            android:layout_marginHorizontal="20dp">-->
-
-<!--            <androidx.appcompat.widget.SearchView-->
-<!--                android:id="@+id/searchView"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:queryHint="Search here..."-->
-<!--                android:iconifiedByDefault="false" />-->
-
-
-<!--        </LinearLayout>-->
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="------------------- EXPLORE -------------------"
-            android:gravity="center"
-            android:textSize="15sp"
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="10dp"
-            android:letterSpacing=".7"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:orientation="horizontal"
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="20dp">
-
-            <HorizontalScrollView
+            <LinearLayout
+                android:id="@+id/main"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="200dp">
+                android:layout_height="wrap_content"
+                android:background="@color/white">
+
+                <FrameLayout
+                    android:id="@+id/topPanel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="------------------- EXPLORE -------------------"
+                    android:gravity="center"
+                    android:textSize="15sp"
+                    android:layout_marginHorizontal="10dp"
+                    android:letterSpacing=".7"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
 
                 <LinearLayout
-                    android:id="@+id/offerContainer"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
                     android:orientation="horizontal"
-                    android:layout_height="wrap_content">
+                    android:layout_marginTop="20dp"
+                    android:layout_marginHorizontal="20dp">
 
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp">
+
+                        <LinearLayout
+                            android:id="@+id/offerContainer"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal" />
+                    </HorizontalScrollView>
                 </LinearLayout>
 
-
-            </HorizontalScrollView>
-
-
-
-        </LinearLayout>
-
-
-
-
-<!--        <TextView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="-&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; WHAT'S ON YOUR MIND? -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;"-->
-<!--            android:gravity="center"-->
-<!--            android:textSize="15sp"-->
-<!--            android:layout_marginTop="20dp"-->
-<!--            android:layout_marginHorizontal="10dp"-->
-<!--            android:letterSpacing=".5"-->
-<!--            android:textColor="@color/black"-->
-<!--            android:textStyle="bold"-->
-<!--            />-->
-
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="150dp"-->
-<!--            android:orientation="horizontal"-->
-<!--            android:layout_marginTop="20dp"-->
-<!--            android:layout_marginHorizontal="20dp">-->
-
-<!--            <HorizontalScrollView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="200dp">-->
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="150dp"-->
-<!--                    android:orientation="horizontal" >-->
-
-<!--                    <LinearLayout-->
-<!--                        android:layout_width="100dp"-->
-<!--                        android:layout_margin="20dp"-->
-<!--                        android:layout_height="150dp"-->
-<!--                        android:orientation="vertical">-->
-
-<!--                        <ImageView-->
-<!--                            android:layout_width="100dp"-->
-<!--                            android:layout_height="100dp"-->
-<!--                            android:src="@drawable/pizza"/>-->
-
-<!--                        <TextView-->
-<!--                            android:layout_width="100dp"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:text="Pizza"-->
-<!--                            android:gravity="center"-->
-<!--                            android:textSize="15sp"/>-->
-
-
-<!--                    </LinearLayout>-->
-
-<!--                    <LinearLayout-->
-<!--                        android:layout_width="100dp"-->
-<!--                        android:layout_margin="20dp"-->
-<!--                        android:layout_height="150dp"-->
-<!--                        android:orientation="vertical">-->
-
-<!--                        <ImageView-->
-<!--                            android:layout_width="100dp"-->
-<!--                            android:layout_height="100dp"-->
-<!--                            android:src="@drawable/burger"/>-->
-
-<!--                        <TextView-->
-<!--                            android:layout_width="100dp"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:text="Burger"-->
-
-<!--                            android:gravity="center"-->
-<!--                            android:textSize="15sp"/>-->
-
-
-<!--                    </LinearLayout>-->
-
-<!--                    <LinearLayout-->
-<!--                        android:layout_width="100dp"-->
-<!--                        android:layout_margin="20dp"-->
-<!--                        android:layout_height="150dp"-->
-<!--                        android:orientation="vertical">-->
-
-<!--                        <ImageView-->
-<!--                            android:layout_width="100dp"-->
-<!--                            android:layout_height="100dp"-->
-<!--                            android:src="@drawable/cake"/>-->
-
-<!--                        <TextView-->
-<!--                            android:layout_width="100dp"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:text="Cake"-->
-<!--                            android:gravity="center"-->
-<!--                            android:textSize="15sp"/>-->
-
-
-<!--                    </LinearLayout>-->
-
-<!--                    <LinearLayout-->
-<!--                        android:layout_width="100dp"-->
-<!--                        android:layout_margin="20dp"-->
-<!--                        android:layout_height="150dp"-->
-<!--                        android:orientation="vertical">-->
-
-<!--                        <ImageView-->
-<!--                            android:layout_width="100dp"-->
-<!--                            android:layout_height="100dp"-->
-<!--                            android:src="@drawable/vbiryani"/>-->
-
-<!--                        <TextView-->
-<!--                            android:layout_width="100dp"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:text="Biryani"-->
-<!--                            android:gravity="center"-->
-<!--                            android:textSize="15sp"/>-->
-
-
-<!--                    </LinearLayout>-->
-
-
-
-
-
-
-
-<!--                </LinearLayout>-->
-<!--            </HorizontalScrollView>-->
-
-
-
-<!--        </LinearLayout>-->
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="150dp"-->
-<!--            android:orientation="horizontal"-->
-<!--            android:layout_marginHorizontal="20dp">-->
-
-<!--            <HorizontalScrollView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="200dp">-->
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="150dp"-->
-<!--                    android:orientation="horizontal" >-->
-
-<!--                    <LinearLayout-->
-<!--                        android:layout_width="100dp"-->
-<!--                        android:layout_margin="20dp"-->
-<!--                        android:layout_height="150dp"-->
-<!--                        android:orientation="vertical">-->
-
-<!--                        <ImageView-->
-<!--                            android:layout_width="100dp"-->
-<!--                            android:layout_height="100dp"-->
-<!--                            android:src="@drawable/paneer"/>-->
-
-<!--                        <TextView-->
-<!--                            android:layout_width="100dp"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:text="Paneer"-->
-<!--                            android:gravity="center"-->
-<!--                            android:textSize="15sp"/>-->
-
-
-<!--                    </LinearLayout>-->
-
-<!--                    <LinearLayout-->
-<!--                        android:layout_width="100dp"-->
-<!--                        android:layout_margin="20dp"-->
-<!--                        android:layout_height="150dp"-->
-<!--                        android:orientation="vertical">-->
-
-<!--                        <ImageView-->
-<!--                            android:layout_width="100dp"-->
-<!--                            android:layout_height="100dp"-->
-<!--                            android:src="@drawable/noodles"/>-->
-
-<!--                        <TextView-->
-<!--                            android:layout_width="100dp"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:text="Noodles"-->
-<!--                            android:gravity="center"-->
-<!--                            android:textSize="15sp"/>-->
-
-
-<!--                    </LinearLayout>-->
-
-<!--                    <LinearLayout-->
-<!--                        android:layout_width="100dp"-->
-<!--                        android:layout_margin="20dp"-->
-<!--                        android:layout_height="150dp"-->
-<!--                        android:orientation="vertical">-->
-
-<!--                        <ImageView-->
-<!--                            android:layout_width="100dp"-->
-<!--                            android:layout_height="100dp"-->
-<!--                            android:src="@drawable/dosa"/>-->
-
-<!--                        <TextView-->
-<!--                            android:layout_width="100dp"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:text="Dosa"-->
-<!--                            android:gravity="center"-->
-<!--                            android:textSize="15sp"/>-->
-
-
-<!--                    </LinearLayout>-->
-
-<!--                    <LinearLayout-->
-<!--                        android:layout_width="100dp"-->
-<!--                        android:layout_margin="20dp"-->
-<!--                        android:layout_height="150dp"-->
-<!--                        android:orientation="vertical">-->
-
-<!--                        <ImageView-->
-<!--                            android:layout_width="100dp"-->
-<!--                            android:layout_height="100dp"-->
-<!--                            android:src="@drawable/sandwich"/>-->
-
-<!--                        <TextView-->
-<!--                            android:layout_width="100dp"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:text="Sandwich"-->
-<!--                            android:gravity="center"-->
-<!--                            android:textSize="15sp"/>-->
-
-
-<!--                    </LinearLayout>-->
-
-
-
-
-
-
-
-<!--                </LinearLayout>-->
-<!--            </HorizontalScrollView>-->
-
-
-
-<!--        </LinearLayout>-->
-
-<!--        <TextView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="-&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; BOOKINGS -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;"-->
-<!--            android:gravity="center"-->
-<!--            android:textSize="15sp"-->
-<!--            android:layout_marginTop="20dp"-->
-<!--            android:layout_marginHorizontal="10dp"-->
-<!--            android:letterSpacing=".5"-->
-<!--            android:textColor="@color/black"-->
-<!--            android:textStyle="bold"-->
-<!--            />-->
-
-        <FrameLayout
-            android:id="@+id/cart"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            >
-
-
-        </FrameLayout>
-
-
-
-
+                <FrameLayout
+                    android:id="@+id/cart"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp" />
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
-</ScrollView>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:menu="@menu/nav_menu"
+        android:layout_marginTop="20dp"
+        app:headerLayout="@layout/nav_header" />
+
+</androidx.drawerlayout.widget.DrawerLayout>
