--- a/app/src/main/res/layout/activity_food_page.xml
+++ b/app/src/main/res/layout/activity_food_page.xml
@@ -17,6 +17,7 @@
 
 
         <ScrollView
+            android:id="@+id/ScrollViewFoodPage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true">
@@ -37,7 +38,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="------------------- EXPLORE -------------------"
+                    android:text="-------------------\n EXPLORE\n -------------------"
                     android:gravity="center"
                     android:textSize="15sp"
                     android:layout_marginHorizontal="10dp"
